# gams

./: .gitignore  .readthedocs.yaml  .travis.yml  BUILD  Building Unreal Into GAMS  CMakeLists.txt  Gams_Python.mpc  INSTALL.txt  LICENSE.txt  README-ANDROID.md  README.md  README.txt  SEI_CPSULS_Autonomy_Tutorials_Agenda_InfoSheet.docx  SEI_CPSULS_Autonomy_Tutorials_Overview_InfoSheet.docx  SEI_CPSULS_Tutorial_Day1_01_Autonomy_Tutorials_Introduction.pptx  SEI_CPSULS_Tutorial_Day1_03_InstallationOfMadaraAndGams.pptx  SEI_CPSULS_Tutorial_Day1_04_CreatingDistributedAutonomyProjects.pptx  SEI_CPSULS_Tutorial_Day1_05_CreatingMultithreadedProgramsAndControllers.pptx  SEI_CPSULS_Tutorial_Day1_07_CreatingHardwareAndSimulationPlatforms.pptx  VREP solution  WORKSPACE  airlib_lib.mpb  capnp_files.mpb  capnp_types.mpb  core  debug_build.mpb  default.features  demo setups  doxygen_help_gen.mpb  gams.mpc  gams.mwc  no_karl.mpb  no_warnings.mpb  pkgbin.sh  ros_lib.mpb  scrimmage.mf  simulation.mpc  test_euler  tests.mpc  using_ace.mpb  (+24 more)
scripts/projects/common/: CMakeLists.txt  debug_build.mpb  project.mpc  using_boost.mpb  using_capnp.mpb  using_gams.mpb  using_madara.mpb  using_osc.mpb  using_oscpp.mpb  using_simtime.mpb  using_vrep.mpb  workspace.mwc
src/: CMakeLists.txt
src/android/: .gitignore
src/dmpl/: ArrayReference.hpp  LazyStorage.hpp  LogAnalyzer.hpp  ProactiveStorage.hpp  Reference.hpp  StatelessStorage.hpp  StorageManager.hpp  knowledge_cast.hpp
src/gams/: CPP11_compat.h  GAMSExport.h  GAMS_Export.h  GamsExport.h  Namespaces.h
src/gams/algorithms/: AlgorithmFactory.cpp  AlgorithmFactory.h  AlgorithmFactoryRepository.cpp  AlgorithmFactoryRepository.h  Algorithm_Factory.cpp  Algorithm_Factory.h  BUILD  BaseAlgorithm.cpp  BaseAlgorithm.h  Base_Algorithm.cpp  Base_Algorithm.h  ControllerAlgorithmFactory.cpp  ControllerAlgorithmFactory.h  Controller_Algorithm_Factory.cpp  Controller_Algorithm_Factory.h  DebugAlgorithm.cpp  DebugAlgorithm.h  Debug_Algorithm.cpp  Debug_Algorithm.h  Executive.cpp  Executive.h  Executor.cpp  Executor.h  Follow.cpp  Follow.h  FormationCoverage.cpp  FormationCoverage.h  FormationFlying.cpp  FormationFlying.h  FormationSync.cpp  FormationSync.h  Formation_Coverage.cpp  Formation_Coverage.h  Formation_Flying.cpp  Formation_Flying.h  Formation_Sync.cpp  Formation_Sync.h  Greet.cpp  Greet.h  GroupBarrier.cpp  (+39 more)
src/gams/auctions/: AuctionBase.cpp  AuctionBase.h  AuctionBase.inl  AuctionBid.h  AuctionBid.inl  AuctionFactory.cpp  AuctionFactory.h  AuctionFactoryRepository.cpp  AuctionFactoryRepository.h  AuctionFactoryRepository.inl  AuctionMaximumBid.cpp  AuctionMaximumBid.h  AuctionMinimumBid.cpp  AuctionMinimumBid.h  AuctionMinimumDistance.cpp  AuctionMinimumDistance.h  AuctionTypesEnum.h  BUILD
src/gams/controllers/: BUILD  BaseController.cpp  BaseController.h  Base_Controller.cpp  Base_Controller.h  ControllerSettings.h  HiveController.cpp  HiveController.h  MapeLoop.cpp  MapeLoop.h  Mape_Loop.cpp  Mape_Loop.h  Multicontroller.cpp  Multicontroller.h
src/gams/elections/: BUILD  ElectionBase.cpp  ElectionBase.h  ElectionBase.inl  ElectionCumulative.cpp  ElectionCumulative.h  ElectionFactory.cpp  ElectionFactory.h  ElectionFactoryRepository.cpp  ElectionFactoryRepository.h  ElectionFactoryRepository.inl  ElectionPlurality.cpp  ElectionPlurality.h  ElectionTypesEnum.h
src/gams/exceptions/: BUILD  GamsException.h  ReferenceFrameException.h
src/gams/formations/: AgentFormation.cpp  AgentFormation.h  AgentFormation.inl  BUILD  StructuralFormation.cpp  StructuralFormation.h
src/gams/groups/: BUILD  GroupBase.cpp  GroupBase.h  GroupBase.inl  GroupFactory.cpp  GroupFactory.h  GroupFactoryRepository.cpp  GroupFactoryRepository.h  GroupFactoryRepository.inl  GroupFixedList.cpp  GroupFixedList.h  GroupTransient.cpp  GroupTransient.h  GroupTypesEnum.h
src/gams/loggers/: BUILD  GlobalLogger.cpp  GlobalLogger.h  Global_Logger.cpp  Global_Logger.h
src/gams/maps/: BUILD  Grid.cpp  Grid.h
src/gams/pose/: Acceleration.h  AngleUnits.h  Angular.cpp  Angular.h  Angular.inl  AngularAcceleration.h  AngularVelocity.h  BUILD  CartesianFrame.cpp  CartesianFrame.h  CartesianFrame.inl  Coordinate.h  Coordinate.inl  Epsilon.h  Euler.h  Euler.inl  EulerFormulas.inl  Framed.h  GPSFrame.cpp  GPSFrame.h  GPSFrame.inl  Linear.cpp  Linear.h  Linear.inl  Orientation.cpp  Orientation.h  Orientation.inl  (+28 more)
src/simulation/: dynamic_simulation.cpp
src/tests/: test_arguments_parser.cpp  test_coordinates.cpp  test_euler.cpp  test_formation_sync.cpp  test_groups.cpp  test_location.cpp  test_utility.cpp  test_utm.cpp  test_variables.cpp
tests/: BUILD  CMakeLists.txt  test_arguments_parser.cpp  test_auctions.cpp  test_controller.cpp  test_controller_run.cpp  test_coordinates.cpp  test_elections.cpp  test_euler.cpp  test_formation_sync.cpp  test_groups.cpp  test_hivecontroller.cpp  test_joystick.cpp  test_location.cpp  test_mape_loop.cpp  test_multicontroller.cpp  test_ros2gams.cpp  test_types.cpp  test_utility.cpp  test_utm.cpp  test_variables.cpp  test_voting.cpp  test_vrep_controller.cpp
tests/capnfiles/: AHRS.capnp  AttitudeTarget.capnp  BatteryState.capnp  BeelinerInfo.capnp  Bool.capnp  CameraInfo.capnp  ClonePoses.capnp  ColorRGBA.capnp  CompressedImage.capnp  CompressedOccupancyGrid.capnp  CompressedOccupancyGridUpdate.capnp  Cpu.capnp  DeltaPose2D.capnp  Detection.capnp  DetectionsStamped.capnp  DiagnosticArray.capnp  DiagnosticStatus.capnp  Disk.capnp  EntranceDetection.capnp  Environment.capnp  ExploreActionGoal.capnp  ExploreGoal.capnp  ExtendedState.capnp  FluidPressure.capnp  GPSVelocity.capnp  GoalID.capnp  GoalPathDefinition.capnp  GoalStatus.capnp  GoalStatusArray.capnp  GotoActionGoal.capnp  GotoGoal.capnp  Header.capn  Header.capn.c++  Header.capn.h  Header.capnp  Illuminance.capnp  ImageMetadata.capnp  Imu.capnp  Int32.capnp  KeyValue.capnp  (+83 more)
tests/helper/: CounterAlgorithm.cpp  CounterAlgorithm.h  CounterPlatform.cpp  CounterPlatform.h  Counter_Algorithm.cpp  Counter_Algorithm.h  Counter_Platform.cpp  Counter_Platform.h
tests/throughput/: gams_throughput.cpp
(+1656 files in other folders)
